public/style.css
body {
  margin: 0;
  padding-bottom: 3rem;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif;
  font-size: 1.2rem;
  background-color: #f1faff;
}

.hidden {
  display: none;
}
.visable {
  display: block;
}

#login-page {
  text-align: center;
  background: #00405a;
  margin: 1.5rem 10% 0 10%;
  border-radius: 20px;
  padding: 30px 20px;
}
#login-page > h1,
h3 {
  color: #eaf6ff;
  text-align: center;
  padding-bottom: 0.7rem;
  margin: 0;
}
#login-page h1 {
  font-size: 45px;
}
#login-page h3 {
  font-size: 25px;
}
#login-form {
  text-align: center;
  padding: 10px 0 20px 0;
}
#login-form label,
input {
  font-size: 1.4rem;
}
#usename-input {
  border: none;
  padding: 15px 20px;
  flex-grow: 1;
  border-radius: 2rem;
  margin: 1.2rem 0 2rem 0;
  min-width: 45%;
  max-width: 80%;
  width: auto;
  text-align: center;
  background-color: #ffffff;
  color: #003459;
}
#usename-input:focus {
  outline: none;
}
#room-buttons {
  text-align: center;
  padding: 10px;
  margin-top: 1rem;
}
#room-buttons .room-button {
  display: inline-block;
  background-color: rgb(129, 190, 231);
  border: 2px solid #00405a;
  color: #003459;
  border-radius: 10px;
  outline: none;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: bold;
  padding: 30px;
  margin: 0.5rem 0.5rem;
  width: auto;
  max-width: 20%;
}
#room-buttons .room-button:hover {
  background-color: rgb(142, 201, 240);
  border: 2px solid rgb(129, 190, 231);
}
#room-buttons .room-button:focus,
.room-button:active {
  background-color: rgb(104, 178, 228);
}
#room-buttons .room-button.selected {
  background-color: rgb(210, 237, 255);
  border: 2px solid rgb(210, 237, 255);
  color: #003459;
  cursor: default;
  box-shadow: 0 0 10px 5px rgba(146, 233, 255, 0.25);
}
#login-button {
  background-color: #d1ecff;
  color: #003459;
  border: none;
  border-radius: 10px;
  outline: none;
  cursor: pointer;
  font-style: italic;
  font-size: 1.8rem;
  padding: 20px 50px;
  margin: 3.5rem 0 0 0;
  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.35);
}
#login-button:hover {
  background-color: #e9f6ff;
}
#login-button:active {
  background-color: #bde2fc;
}

#chat-header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  background-color: #00405a;
  border-bottom: 4px solid #0073a0;
  color: #ebebeb;
}
.header-cell {
  flex: 1;
  margin: 0;
  padding: 0;
}
#chat-title {
  flex-grow: 1;
  font-size: 1.8rem;
  text-align: center;
  margin: 0;
}
#user-nick {
  font-size: 1.2rem;
  font-style: normal;
  font-weight: normal;
  padding-right: 20px;
  text-align: right;
  white-space: nowrap;
}

#messages {
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-top: 60px;
}
.msg-info {
  text-align: center;
  font-style: italic;
  margin: 10px 10%;
}
.msg {
  border-radius: 10px;
  margin: 5px;
  border: solid 1px #005d82;
  display: flex;
  flex-direction: column;
}
.msg.msg-other {
  background-color: #a4d7ec;
  margin-right: 20%;
  color: #003459;
  width: fit-content;
}
.msg.msg-mine {
  background-color: #00405a;
  margin-left: 20%;
  color: #dff2ff;
  width: 80%;
  height: auto;
}
.msg .header {
  display: flex;
  align-items: left;
  background-color: #005d82;
  color: #eaf6ff;
  padding: 10px 20px;
  border-radius: 10px 10px 0 0;
}
.msg .user {
  font-weight: bold;
  font-size: 1.2rem;
}
.msg .date {
  font-style: italic;
  font-size: 1rem;
  padding-left: 20px;
  padding-top: 0.2rem;
}
.msg .content {
  font-size: 1.2rem;
  padding: 10px;
  padding-bottom: 5px;
  overflow-wrap: break-word;
}
.msg .chat-img {
  max-width: 100%;
  display: block;
  margin: 5px 0;
}

#message-form {
  background: #6eacc4;
  padding: 0.25rem;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  height: 3rem;
  box-sizing: border-box;
  backdrop-filter: blur(10px);
}
#message-form input {
  border: none;
  padding: 0 1rem;
  flex-grow: 1;
  border-radius: 2rem;
  margin: 0.25rem;
  font-size: 1.2rem;
}
#message-form input:focus {
  outline: none;
}
#message-form button {
  background: #003b52;
  border: none;
  padding: 0 1rem;
  margin: 0.25rem;
  border-radius: 15px;
  outline: none;
  color: #fff;
  cursor: pointer;
  font-size: 1.1rem;
}
#message-form > button:hover,
button:focus {
  background: #004d6b;
}
#upload-icon {
  width: 30px;
  padding: 5px;
  cursor: pointer;
}
#upload-icon:hover {
  background-color: rgba(255, 255, 255, 0.22);
  box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.30);
}

